Delta variables now functional WIP: add STRING type == to parsing language"